[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
custom_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/VBox"]
text = "Galactic Ground Zero"
horizontal_alignment = 1

[node name="DesertButton" type="Button" parent="CenterContainer/VBox"]
text = "Play - Desert"

[node name="UnderwaterButton" type="Button" parent="CenterContainer/VBox"]
text = "Play - Underwater"

[node name="ForestButton" type="Button" parent="CenterContainer/VBox"]
text = "Play - Wild Forest"

[node name="QuitButton" type="Button" parent="CenterContainer/VBox"]
text = "Quit"